# SFML_WidgetFactory

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Tests/: CMakeLists.txt
WidgetFactory/: CMakeLists.txt
WidgetFactory/Source/: WidgetFactory.cpp
